--- a/nodets/package.json
+++ b/nodets/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/node": "^20.12.12",
+        "eslint": "^9.3.0",
         "nodemon": "^3.1.0",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
